# apd

./: Cargo.toml  LICENSE  README.md
examples/advect/: Cargo.toml
examples/advect/src/: main.rs
examples/diffuse/: Cargo.toml
examples/diffuse/src/: main.rs
examples/image-util/: Cargo.toml
examples/image-util/src/: lib.rs
examples/project/: Cargo.toml
examples/project/src/: main.rs
src/: lib.rs
src/d2/: linear.rs  mod.rs
