[package]
name = "apd"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
cgmath = "0.18.0"

[dev-dependencies]
approx = "0.5.0"

[workspace]
members = [
	"examples/image-util",
	"examples/advect",
	"examples/project",
	"examples/diffuse",
]
